--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
+    <script src="coffee.js"></script>
     <link rel="stylesheet" type="text/css" href="all.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Advent Pro"
-      rel="stylesheet"
-    />
+	<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
@@ -22,13 +20,11 @@
     </button>
     <button
       class="tablink"
-      onclick="openPage('Ingredients', this, 'steelblue')">
+      onclick="openPage('Ingredients', this, 'steelblue')"
+    >
       Ingredients
     </button>
-    <button class="tablink" onclick="openPage('Animations', this, 'purple')">
-      Animations
-    </button>
-    <button class="tablink" onclick="openPage('Lessons', this, '#FFB6C1')">
+    <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
       Lessons
     </button>
     <button class="tablink" onclick="openPage('Contribute', this, 'orange')">
@@ -41,17 +37,16 @@
     <div>
       <button id="pie" onclick="pie()">Pie</button>
       <button id="pasta" onclick="cake()">Cake</button>
-      <button id="sandwiches" onclick="sandwiches()">Sandwiches</button>
+      <button id="cookies" onclick="cookies()">Cookies</button>
+			<button id="breakfastfoods" onclick="breakfastfoods()">Breakfast Foods</button>
+      <button id="dressings_and_vegetables" onclick="dressingsandvegetables()">Dressings and Vegetables</button>
+      <button id="puddings_and_custards" onclick="puddingsandcustards()">Puddings and Custards</button>
+      <button id="random_tips" onclick="randomtips()">Random Tips</button>
+      <button id="savory" onclick="savory()">Savory</button>
     </div>
   </div>
 
   <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
-
-  <div id="Ingredients" class="tabcontent">
-  </div>
-
-  <div id="Animations" class="tabcontent">
-  </div>
 
 <div id="Lessons" class="tabcontent">
   <body>
