--- a/pie.html
+++ b/pie.html
@@ -12,66 +12,18 @@
 <p>Click on the tabs to get your pie recpie</p>
 
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'Pecan Pie')" id="defaultOpen">Pecan Pie</button>
-  <button class="tablinks" onclick="openTab(event, 'Strawberry Rhubarb')">Strawberry Rhubarb</button>
-  <button class="tablinks" onclick="openTab(event, 'Apple Pie')">Apple Pie</button>
-  <button class="tablinks" onclick="openTab(event, 'Pumpkin Pie')">Pumpkin Pie</button>
-
-
-</div>
-
-<div id="Pecan Pie" class="tabcontent">
-  <h3>Pecan Pie</h3>
-  <p>1 1/2 cups pecan pieces.
-    <br>3 large eggs.
-    <br> 1 cup sugar.
-    <br>3/4 cup light or dark corn syrup.
-    <br>2 tablespoons melted butter.
-    <br>2 teaspoons vanilla extract.
-    <br>1/2 teaspoon salt.<br>1 (9-inch) deep-dish frozen unbaked pie shell.
-</p>
-</div>
-
-<div id="Strawberry Rhubarb" class="tabcontent">
-  <h3>Strawberry Rhubarb</h3>
-
-  <p>Preheat oven to 400 degrees F (200 degrees C).
-    <br>In a large bowl, mix flour and sugar.
-    <br> Add strawberries and chopped rhubarb
-    <br>Pour filling into pie crust
-    <br>Apply yolk to top of pie, using a pastry brush
-    <br>Bake at 400 degrees F (200 degrees C), for 35 to 40 minutes, or until bubbly and brown.
-
-</p>
+  <button class="tablinks" onclick="openTab(event, 'Apple Pie')" id="defaultOpen">Apple Pie</button>
+  <button class="tablinks" onclick="openTab(event, 'California Walnut Pie')">California Walnut Pie</button>
 </div>
 
 <div id="Apple Pie" class="tabcontent">
-  <h3>Apple Pie</h3>
-  <p>2 tablespoons freshly squeezed lemon juice.
-    <br>3 pounds baking apples like
-    <br> Golden Delicious, Cortland, or Mutsu.
-    <br>2/3 cup sugar, plus more for sprinkling on the pie.
-    <br>1/4 cup unsalted butter.
-    <br>1/4 teaspoon ground cinnamon.
-    <br>Generous pinch of ground nutmeg.
-    <br>1 large egg, lightly beaten.
-</p>
-</div>
-
-<div id="Pumpkin Pie" class="tabcontent">
-  <h3>Pumpkin Pie</h3>
-  <p>1 (12 fluid ounce) can evaporated milk.
-    <br>2 eggs, beaten.
-    <br>3/4 cup packed brown sugar.
-    <br>1/2 teaspoon ground cinnamon.
-    <br>1/2 teaspoon ground ginger.
-    <br>1/2 teaspoon ground nutmeg.
-    <br>1/2 teaspoon salt.
-    <br>2 cups of pumpkin
-</p>
-</div>
-
-
+	<body>
+		<object width="100%" height="500px" data="recipe_htmls/Pies/apple_pie.html"></object>
+    </div>
+	<div id="California Walnut Pie" class="tabcontent">
+		<body>
+			<object width="100%" height="500px" data="recipe_htmls/Pies/california_walnut_pie.html"></object>
+	    </div>
 <script>
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
