--- a/recipe_htmls/breakfastfoods/blueberry_muffins.html
+++ b/recipe_htmls/breakfastfoods/blueberry_muffins.html
@@ -1,6 +1,6 @@
   <html>
   <head> </head>
-
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
   <body>
     <div id="Blueberry Muffins">
       <h2>Blueberry Muffins</h2>
@@ -38,3 +38,14 @@
     </div>
   </body>
 </html>
+<style>
+	body {
+		text-align: center;
+		font-family: Alice;
+	}
+
+	pre {
+		text-align: left;
+		font-family: Alice;
+	}
+</style>
