--- a/recipe_htmls/cake/applecake.html
+++ b/recipe_htmls/cake/applecake.html
@@ -1,5 +1,5 @@
 <html>
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
   <div id="Apple Lemon Cake" class="tabcontent">
     <h1>Apple Cake</h1>
     <body>
@@ -16,4 +16,15 @@
     </body>
     <pre>
   </div>
+<style>
+	body {
+		text-align: center;
+		font-family: Alice;
+	}
+
+	pre {
+		text-align: left;
+		font-family: Alice;
+	}
+</style>
 </html>
