--- a/recipe_htmls/cake/applelemoncake.html
+++ b/recipe_htmls/cake/applelemoncake.html
@@ -1,5 +1,5 @@
 <html>
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <div id="Apple Lemon Cake" class="tabcontent">
     <h1>Apple Lemon Country Cake</h1>
     <body>
@@ -26,12 +26,12 @@
 <style>
   body {
     text-align: center;
-    font-family: Abel;
+    font-family: Alice;
     width: ;
   }
 
   pre {
     text-align: left;
-    font-family: Abel;
+    font-family: Alice;
   }
 </style>
