--- a/recipe_htmls/cake/chocolatecake.html
+++ b/recipe_htmls/cake/chocolatecake.html
@@ -1,5 +1,5 @@
 <html>
-<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
 <h1> Chocolate cake </h1>
 <div id="Chocolatecake">
 <body> 1/2 cup of butter<br>
@@ -23,11 +23,11 @@
 <style>
 	body {
 		text-align: center;
-		font-family: Abel;
+		font-family: Alice;
 	}
 
 	pre {
 		text-align: left;
-		font-family: Abel;
+		font-family: Alice;
 	}
 </style>
