--- a/recipe_htmls/cake/poundcake.html
+++ b/recipe_htmls/cake/poundcake.html
@@ -1,12 +1,13 @@
 <html>
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <div id="Lemonbars">
     <h1>Pound Cake</h1>
     <body>
       1 cup of brown sugar<br />
       2 sticks of butter<br />
       4 eggs<br />
-      1 teaspoon of vanilla<br />` 1 3/4 cups of flour<br />
+      1 teaspoon of vanilla<br />
+      1 3/4 cups of flour<br />
       1/2 teaspoon of baking powder<br />
       1/4 teaspoon salt<br />
     </body>
@@ -20,12 +21,12 @@ at 350º for one hour until cake is done.
     <style>
       body {
         text-align: center;
-        font-family: Abel;
+        font-family: Alice;
       }
 
       pre {
         text-align: left;
-        font-family: Abel;
+        font-family: Alice;
       }
     </style>
   </div>
