--- a/recipe_htmls/cake/sheathcake.html
+++ b/recipe_htmls/cake/sheathcake.html
@@ -1,5 +1,5 @@
 <html>
-<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
 <div id="sheathcake">
 	<h1>Sheath Cake</h1>
 
@@ -24,12 +24,12 @@
   <style>
     body {
       text-align: center;
-      font-family: Abel;
+      font-family: Alice;
     }
 
     pre {
       text-align: left;
-      font-family: Abel;
+      font-family: Alice;
     }
   </style>
 </html>
