--- a/recipe_htmls/cake/silverwhitecake.html
+++ b/recipe_htmls/cake/silverwhitecake.html
@@ -1,5 +1,5 @@
 <html>
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <div id="Lemonbars">
     <h1>Silver White Cake</h1>
     <body>
@@ -24,12 +24,12 @@
     <style>
       body {
         text-align: center;
-        font-family: Abel;
+        font-family: Alice;
       }
 
       pre {
         text-align: left;
-        font-family: Abel;
+        font-family: Alice;
       }
     </style>
   </div>
