--- a/recipe_htmls/cookies/chocolatebrownies.html
+++ b/recipe_htmls/cookies/chocolatebrownies.html
@@ -1,8 +1,8 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
-    <div id="Chocolate" Brownies>
+    <div id="Chocolate Brownies">
       <h2>Chocolate Brownies</h2>
 
       <h3>Ingredients:</h3>
@@ -26,3 +26,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
