--- a/recipe_htmls/cookies/gingerbread.html
+++ b/recipe_htmls/cookies/gingerbread.html
@@ -1,12 +1,8 @@
 <html>
-  
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
   <body>
     <div id="gingerbread cookies">
       <h2>Gingerbread</h2>
-      <p>
-        nathalie will fill in this section later
-      <p/>
-
       <h3>Ingredients</h3>
       <h4> in one bowl: </h4>
       <p>
@@ -27,9 +23,15 @@
         3) stir in dry ingredients. <br />
         4) put cookie dough on a cookie sheet and bake for 20-30 minutes for 350 degrees F <br />
       </body>
-      <style>
-      p{
-        font-family:Abel; 
-        text-align:left;
-        }  
+	<style>
+		body {
+			text-align: center;
+			font-family: Alice;
+		}
+	
+		pre {
+			text-align: left;
+			font-family: Alice;
+		}
+	</style>
         
