--- a/recipe_htmls/cookies/raisindropcookies.html
+++ b/recipe_htmls/cookies/raisindropcookies.html
@@ -1,6 +1,6 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Raisin Drop Cookies">
       <h2>Raisin Drop Cookies</h2>
@@ -29,3 +29,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
