--- a/recipe_htmls/dressings_and_salads/coleslawdressing.html
+++ b/recipe_htmls/dressings_and_salads/coleslawdressing.html
@@ -1,13 +1,13 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Cole Slaw Dressing">
       <h2>Cole Slaw Dressing</h2>
 
       <h3>Ingredients</h3>
       <p>
-        <br /> 
+        <br />
         1/4 cup mayonaise <br />
         1/4 tsp. salt <br />
         2 tsp. sugar <br />
@@ -25,3 +25,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
