--- a/recipe_htmls/savory/roasted_pumpkin_seeds.html
+++ b/recipe_htmls/savory/roasted_pumpkin_seeds.html
@@ -1,5 +1,6 @@
 <html>
   <head> </head>
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Pumpkin Seeds">
       <h2>Pumpkin Seeds</h2>
@@ -25,3 +26,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
