--- a/recipe_htmls/Pies/apple_pie.html
+++ b/recipe_htmls/Pies/apple_pie.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Apple Pie">
       <h2>Apple Pie</h2>
@@ -29,3 +29,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
