--- a/recipe_htmls/cake/chiffoncake.html
+++ b/recipe_htmls/cake/chiffoncake.html
@@ -1,5 +1,5 @@
 <html> 
-<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
 <div id="Chiffoncake">
 <h1> Chiffon cake </h1>
 <body> 
@@ -27,11 +27,11 @@ minutes, or until delicately browned.
 <style>
 	body {
 		text-align: center;
-		font-family: Abel;
+		font-family: Alice;
 	}
 
 	pre {
 		text-align: left;
-		font-family: Abel;
+		font-family: Alice;
 	}
 </style>
