--- a/recipe_htmls/cake/cupcakes.html
+++ b/recipe_htmls/cake/cupcakes.html
@@ -1,5 +1,5 @@
 <html>
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <div id="cupcakes">
     <h1>Cupcakes</h1>
     <body>
@@ -39,11 +39,11 @@
 <style>
   body {
     text-align: center;
-    font-family: Abel;
+    font-family: Alice;
   }
 
   pre {
     text-align: left;
-    font-family: Abel;
+    font-family: Alice;
   }
 </style>
