--- a/recipe_htmls/cake/vanillapuddingcake.html
+++ b/recipe_htmls/cake/vanillapuddingcake.html
@@ -1,5 +1,5 @@
 <html>
-<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
 <div id="Vanilla Pudding Cake">
 	<h1>Vanilla Pudding Cake</h1>
 
@@ -22,12 +22,12 @@
   <style>
     body {
       text-align: center;
-      font-family: Abel;
+      font-family: Alice;
     }
 
     pre {
       text-align: left;
-      font-family: Abel;
+      font-family: Alice;
     }
   </style>
 </html>
