--- a/recipe_htmls/dressings_and_salads/riceandbroccoli.html
+++ b/recipe_htmls/dressings_and_salads/riceandbroccoli.html
@@ -1,6 +1,6 @@
 <html> 
   <head> </head>
-
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
   <body>
     <div id="Rice and Broccoli">
     <h2>Rice and Broccoli</h2>
@@ -11,3 +11,14 @@
       1 
   </body>
 </html>
+<style>
+	body {
+		text-align: center;
+		font-family: Alice;
+	}
+
+	pre {
+		text-align: left;
+		font-family: Alice;
+	}
+</style>
