--- a/recipe_htmls/dressings_and_salads/zestyshrimpsalad.html
+++ b/recipe_htmls/dressings_and_salads/zestyshrimpsalad.html
@@ -1,6 +1,6 @@
 <html> 
   <head></head>
-
+<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
   <body>
     <div id="Zesty Shrimp Salad">
     <h2> Zesty Shrimp Salad</h2>
@@ -10,7 +10,7 @@
       <br />
       2 cups diced cooked shrimp <br />
       1/2 cup diced celery <br />
-      Cheese Garden Salad Dressing <<br />
+      Cheese Garden Salad Dressing <br />
     </p>
     <h3>Instructions</h3>
     <p>
@@ -18,3 +18,14 @@
       2) Pile onto lettuce leaves and garnish with cooked egg or tomato <br />
   </body>
 </html>
+<style>
+	body {
+		text-align: center;
+		font-family: Alice;
+	}
+
+	pre {
+		text-align: left;
+		font-family: Alice;
+	}
+</style>
