--- a/recipe_htmls/puddingandcustards/soft_custard.html
+++ b/recipe_htmls/puddingandcustards/soft_custard.html
@@ -1,6 +1,6 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Soft Custard">
       <h2>Soft Custard</h2>
@@ -27,3 +27,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
