--- a/recipe_htmls/random_tips/household_tricks.html
+++ b/recipe_htmls/random_tips/household_tricks.html
@@ -1,6 +1,6 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Household Hints">
       <h2>Household Hints</h2>
@@ -23,3 +23,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
