--- a/recipe_htmls/savory/mac_and_cheese.html
+++ b/recipe_htmls/savory/mac_and_cheese.html
@@ -1,6 +1,6 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Mac and Cheese">
       <h2>Mac and Cheese</h2>
@@ -28,3 +28,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
