--- a/recipe_htmls/savory/supper_potatoes.html
+++ b/recipe_htmls/savory/supper_potatoes.html
@@ -1,6 +1,6 @@
 <html>
   <head> </head>
-
+  <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" />
   <body>
     <div id="Supper Potatoes">
       <h2>Supper Potatoes</h2>
@@ -26,3 +26,14 @@
     </div>
   </body>
 </html>
+<style>
+  body {
+    text-align: center;
+    font-family: Alice;
+  }
+
+  pre {
+    text-align: left;
+    font-family: Alice;
+  }
+</style>
