--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
-    <script src="coffee.js"></script>
     <link rel="stylesheet" type="text/css" href="all.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,6 +22,9 @@
       onclick="openPage('Ingredients', this, 'steelblue')"
     >
       Ingredients
+    </button>
+    <button class="tablink" onclick="openPage('Animations', this, 'purple')">
+      Animations
     </button>
     <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
       Lessons
@@ -47,6 +49,9 @@
   </div>
 
   <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
+  <div id="Ingredients" class="tabcontent"></div>
+
+  <div id="Animations" class="tabcontent"></div>
 
 <div id="Lessons" class="tabcontent">
   <body>
