--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
+	<script src="coffee.js">
+	</script>
     <link rel="stylesheet" type="text/css" href="all.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,11 +28,15 @@
     <button class="tablink" onclick="openPage('Animations', this, 'purple')">
       Animations
     </button>
-    <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
+    <button class="tablink" onclick="openPage('Lessons', this, 'pink')">
       Lessons
     </button>
     <button class="tablink" onclick="openPage('Contribute', this, 'orange')">
       Contribute
+    </button>
+  </body>
+<button class="tablink" onclick="openPage('AboutUs', this, 'chartreus')">
+      About Us
     </button>
   </body>
 
@@ -80,6 +86,7 @@
     </form>
   </div>
 </div>
+<div id="AboutUs" class="tabcontent"></div>
 
 <script>
 // Get the element with id="defaultOpen" and click on it
