--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+	<script src="coffee.js">
+	</script>
     <script src="myFunctions.js"></script>
     <link rel="stylesheet" type="text/css" href="all.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
@@ -37,19 +39,24 @@
   <div id="All" class="tabcontent">
     <h3>Recipe Categories</h3>
     <div>
-      <button id="pie" onclick="pie()">Pie</button>
-      <button id="pasta" onclick="cake()">Cake</button>
-      <button id="cookies" onclick="cookies()">Cookies</button>
-			<button id="breakfastfoods" onclick="breakfastfoods()">Breakfast Foods</button>
-      <button id="dressings_and_vegetables" onclick="dressingsandvegetables()">Dressings and Vegetables</button>
-      <button id="puddings_and_custards" onclick="puddingsandcustards()">Puddings and Custards</button>
-      <button id="random_tips" onclick="randomtips()">Random Tips</button>
-      <button id="savory" onclick="savory()">Savory</button>
+      <button id="pie" onclick="call_itempage('pie.html')">Pie</button>
+      <button id="pasta" onclick="call_itempage('cake.html')">Cake</button>
+	    <button id="breakfastfoods" onclick="call_itempage('breakfastfoods.html')">Breakfast Foods</button>
+      <button id="cookies" onclick="call_itempage('cookies.html')>Cookies</button>
+      <button id="dressings_and_vegetables" onclick="call_itempage('dressings_and_vegtables.html')">Dressings and Vegetables</button>
+      <button id="puddings_and_custards" onclick="call_itempage('puddingsandcustards')">Puddings and Custards</button>
+      <button id="random_tips" onclick="call_itempage('randomtips.html')">Random Tips</button>
+      <button id="savory" onclick="call_itempage('savory.html')">Savory</button>
+      <button id="bread" onclick="call_itempage('bread.html')">Bread</button>
+      <button id="jello" onclick="call_itempage('jello.html')">Jello</button>
     </div>
   </div>
 
   <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
-  <div id="Ingredients" class="tabcontent"></div>
+  <div id="Ingredients" class="tabcontent">
+<object width="100%" height="500px" data="search.html"></object>
+</div>
+
 
   <div id="Animations" class="tabcontent"></div>
 
