changes search button function

--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <style>
-     
+
       body {
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
@@ -70,7 +70,7 @@
 
   <body>
       <div class="search-container">
-        <form action="/action_page.php">
+        <form action="">
           <input type="text" placeholder="Search.." name="search" />
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
