--- a/cake.html
+++ b/cake.html
@@ -1,4 +1,4 @@
-3<html>
+<html>
   <head>
     <script type="text/javascript" src="myFunctions.js"></script>
     <link rel="stylesheet" type="text/css" href="pasta.css" />
@@ -86,3 +86,4 @@
     </script>
   </body>
 </html>
+
