--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="all.css" />
 	<link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+</body>
 
   <body>
     <button
@@ -17,8 +17,7 @@
       All
     </button>
     <button class="tablink" onclick="openPage('Quiz', this, 'green')">
-      Quiz
-    </button>
+      Quiz</button>
     <button
       class="tablink"
       onclick="openPage('Ingredients', this, 'steelblue')"
@@ -34,15 +33,13 @@
     <button class="tablink" onclick="openPage('Contribute', this, 'orange')">
       Contribute
     </button>
-  </body>
-
   <div id="All" class="tabcontent">
     <h3>Recipe Categories</h3>
     <div>
       <button id="pie" onclick="call_itempage('pie.html')">Pie</button>
       <button id="pasta" onclick="call_itempage('cake.html')">Cake</button>
 	    <button id="breakfastfoods" onclick="call_itempage('breakfastfoods.html')">Breakfast Foods</button>
-      <button id="cookies" onclick="call_itempage('cookies.html')>Cookies</button>
+      <button id="cookies" onclick="call_itempage('cookies.html')">Cookies</button>
       <button id="dressings_and_vegetables" onclick="call_itempage('dressings_and_vegtables.html')">Dressings and Vegetables</button>
       <button id="puddings_and_custards" onclick="call_itempage('puddingsandcustards')">Puddings and Custards</button>
       <button id="random_tips" onclick="call_itempage('randomtips.html')">Random Tips</button>
@@ -51,6 +48,19 @@
       <button id="jello" onclick="call_itempage('jello.html')">Jello</button>
     </div>
   </div>
+  <div>
+    </body>
+      <button id="pie" onclick="call_itempage('pie.html')">Pie</button>
+      <button id="pasta" onclick="call_itempage('cake.html')">Cake</button>
+	    <button id="breakfastfoods" onclick="call_itempage('breakfastfoods.html')">Breakfast Foods</button>
+      <button id="cookies" onclick="call_itempage('cookies.html')">Cookies</button>
+      <button id="dressings_and_salads" onclick="call_itempage('dressings_and_salads.html')">Dressings and Vegetables</button>
+      <button id="puddings_and_custards" onclick="call_itempage('puddingsandcustards')">Puddings and Custards</button>
+      <button id="random_tips" onclick="call_itempage('randomtips.html')">Random Tips</button>
+      <button id="savory" onclick="call_itempage('savory.html')">Savory</button>
+      <button id="bread" onclick="call_itempage('bread.html')">Bread</button>
+      <button id="jello" onclick="call_itempage('jello.html')">Jello</button>
+    </div>
 
   <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
   <div id="Ingredients" class="tabcontent">
@@ -60,13 +70,13 @@
 
   <div id="Animations" class="tabcontent"></div>
 
-<div id="Lessons" class="tabcontent">
-  <body>
+<div id="Lessons" class="tabcontent"></div>
+
   <object width="100%" height="500px" data="lessons.html"></object>
-</div>
+
 
 <div id="Contribute" class="tabcontent">
-  <h3>Contribute/Contact</h3>
+  <h3>Contribute/Contact</h3></div>
 
   <div class="container">
   <form action="action_page.php" method="POST">
@@ -82,18 +92,32 @@
     <label for="message">Comment/Contribution</label>
     <textarea id="message" name="message" placeholder="Please contribute a recipe, or write down any questions and comments. Thank you for your contribution!" style="height:200px" required="true"></textarea>
 
-    <input id="submit_btn" class="btn btn-submit" type="submit" value="Submit" >
-
+    <input id="submit_btn" class="btn btn-submit" type="submit" value="Submit" ></input>
     </form>
-  </div>
-</div>
+    </div>
+    </div>
 
 <script>
 // Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
+document.getElementById("defaultOpen").click();{}
+tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].style.backgroundColor = "";
+  }
+  document.getElementById(pageName).style.display = "block";
+  elmnt.style.backgroundColor = color;{}
 
-  <script>
-    document.getElementById("defaultOpen").click();
-  </script>
+function call_itempage(address) {
+  window.location.href = address;
+}
+    document.getElementById("defaultOpen").click();{
+    }
+function openPage(pageName, elmnt, color) {
+    var i, tabcontent, tablinks;
+}
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+    }
+</script>
 </html>
