--- a/search.html
+++ b/search.html
@@ -1,80 +1,176 @@
 <html>
   <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
+      * {
+        box-sizing: border-box;
+      }
 
-      body {
+      #myInput {
+        background-image: url("/css/searchicon.png");
+        background-position: 10px 12px;
+        background-repeat: no-repeat;
+        width: 100%;
+        font-size: 16px;
+        padding: 12px 20px 12px 40px;
+        border: 1px solid #ddd;
+        margin-bottom: 12px;
+      }
+
+      #myUL {
+        list-style-type: none;
+        padding: 0;
         margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
       }
 
-      a:hover {
-        background-color: #ddd;
+      #myUL li a {
+        border: 1px solid #ddd;
+        margin-top: -1px; /* Prevent double borders */
+        background-color: #f6f6f6;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
         color: black;
+        display: block;
       }
 
-       a.active {
-        background-color: #2196f3;
-        color: white;
-      }
-
-      .search-container {
-        float: center;
-      }
-
-      input[type="text"] {
-        padding: 20px;
-        margin-top: 8px;
-        font-size: 17px;
-        border: none;
-      }
-
-        .search-container button {
-        float: center;
-        padding: 40px 10px;
-        margin-top: 10px;
-        margin-right: 16px;
-        background: #ddd;
-        font-size: 17px;
-        border: none;
-        cursor: pointer;
-      }
-
-       .search-container button:hover {
-        background: #ccc;
-      }
-
-      @media screen and (max-width: 600px) {
-        .topnav .search-container {
-          float: none;
-        }
-        .topnav a,
-        .topnav input[type="text"],
-        .search-container button {
-          float: 20;
-          display: block;
-          text-align: left;
-          width: 100%;
-          margin: 0;
-          padding: 14px;
-        }
-        .topnav input[type="text"] {
-          border: 1px solid #ccc;
-        }
+      #myUL li a:hover:not(.header) {
+        background-color: #eee;
       }
     </style>
   </head>
 
-  <body>
-      <div class="search-container">
-        <form action="">
-          <input type="text" placeholder="Search.." name="search" />
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-      </div>
-    </div>
+    <input
+      type="text"
+      id="myInput"
+      onkeyup="myFunction()"
+      placeholder="Search for names.."
+      title="Type in a name"
+    />
+
+    <ul id="myUL">
+      <li>
+        <a href="#"
+         onclick="openCat('recipe_htmls/dressings_and_salads/antipasto_salad')">Antipasto Salad</a>
+      </li>
+
+      <li>
+        <a href="#" onclick="openCat('recipe_htmls/cake/applecake')">
+          Apple Cake</a
+        >
+      </li>
+
+      <li><a href="#" onclick="openCat('recipe_htmls/cake/applelemoncake')">Apple Lemon Cake</a></li>
+
+      <li><a href="#" onclick="openCat('recipe_htmls/Pies/apple_pie')">Apple Pie</a></li>
+
+      <li><a href="#"onclick="openCat('recipe_htmls/puddingandcustards/baked_indian_pudding')">Baked Indian Pudding</a></li>
+
+      <li><a href="#" onclick="openCat('recipe_htmls/cake/blueberrycake')">Blueberry Cake</a></li>
+
+      <li><a href="#">Blueberry Muffins</a></li>
+
+      <li><a href="#">Caesar Salad</a></li>
+
+      <li><a href="#">California Walnut Pie</a></li>
+
+      <li><a href="#">Chiffon Cake</a></li>
+
+      <li><a href="#">Chocolate Brownies</a></li>
+
+      <li><a href="#">Chocolate Cake</a></li>
+
+      <li><a href="#">Classic Rice Crispy Treats</a></li>
+
+      <li><a href="#">Cole Slaw Dressing</a></li>
+
+      <li><a href="#">Cranberry Fruit Nut Bread</a></li>
+
+      <li><a href="#">Gingerbread Cookies</a></li>
+
+      <li><a href="#">Haddock Casserole</a></li>
+
+      <li><a href="#">Household Tips</a></li>
+
+      <li><a href="#">Lemon Bars</a></li>
+
+      <li><a href="#">Macaroni and Cheese</a></li>
+
+      <li><a href="#">Mince Meat</a></li>
+
+      <li><a href="#">Peanut Butter Fingers</a></li>
+
+      <li><a href="#">Pecan Chocolate Maxi's</a></li>
+
+      <li><a href="#">Pickled Eggs</a></li>
+
+      <li><a href="#">Pie Crust</a></li>
+
+      <li><a href="#">Potatoe Salad</a></li>
+
+      <li><a href="#">Pound Cake</a></li>
+
+      <li><a href="#">Poultry Seasoning</a></li>
+
+      <li><a href="#">Pumpkin Pie Spice</a></li>
+
+      <li><a href="#">Raisin Cake</a></li>
+
+      <li><a href="#">Raisin Drop Cookies</a></li>
+
+      <li><a href="#">Rice Salad Provencale</a></li>
+
+      <li><a href="#">Rice and Broccoli</a></li>
+
+      <li><a href="#">Roasted Pumpkin Seeds</a></li>
+
+      <li><a href="#">Salad Dressing</a></li>
+
+      <li><a href="#">Scalloped Scallops</a></li>
+
+      <li><a href="#">Seafood Casserole</a></li>
+
+      <li><a href="#">Sea Leg Casserole</a></li>
+
+      <li><a href="#">Sheath Cake</a></li>
+
+      <li><a href="#">Silver White Cake</a></li>
+
+      <li><a href="#">Sliced Egg</a></li>
+
+      <li><a href="#">Soft Custard</a></li>
+
+      <li><a href="#">Supper Potatoes</a></li>
+
+      <li><a href="#">Vanilla Cupcakes</a></li>
+
+      <li><a href="#">Vanilla Pudding Cake</a></li>
+
+      <li><a href="#">Whoopie Pies</a></li>
+
+      <li><a href="#">Zesty Shrimp Salad</a></li>
+    </ul>
+
+    <script>
+      function myFunction() {
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        ul = document.getElementById("myUL");
+        li = ul.getElementsByTagName("li");
+        for (i = 0; i < li.length; i++) {
+          a = li[i].getElementsByTagName("a")[0];
+          txtValue = a.textContent || a.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+          } else {
+            li[i].style.display = "none";
+          }
+        }
+      }
+    function openCat(id) {
+        window.location.href = id + ".html";
+    }
+    </script>
   </body>
 </html>
