--- a/pasta.html
+++ b/pasta.html
@@ -1,4 +1,4 @@
-<html>
+3<html>
   <head>
     <script type="text/javascript" src="myFunctions.js"></script>
     <link rel="stylesheet" type="text/css" href="pasta.css" />
@@ -86,4 +86,3 @@
     </script>
   </body>
 </html>
-
