--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </button>
     <button
       class="tablink"
-      onclick="openPage('Ingredient', this, 'steelblue')"
+      onclick="openPage('Ingredients', this, 'steelblue')"
     >
       Ingredients
     </button>
