--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </button>
     <button
       class="tablink"
-      onclick="openPage('Ingredients', this, 'steelblue')"
+      onclick="openPage('Ingredient', this, 'steelblue')"
     >
-      Ingredients
+      Ingredients hello
     </button>
     <button class="tablink" onclick="openPage('Animations', this, 'purple')">
       Animations
