--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       class="tablink"
       onclick="openPage('Ingredient', this, 'steelblue')"
     >
-      Ingredients hello
+      Ingredients 
     </button>
     <button class="tablink" onclick="openPage('Animations', this, 'purple')">
       Animations
